--- a/ch_4_while_loops.ipynb
+++ b/ch_4_while_loops.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7gnSNTFojGHI0jo5mXNJQ",
+      "authorship_tag": "ABX9TyOEHJk3g7YAiqlxmsKGFsyN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -306,13 +306,55 @@
     {
       "cell_type": "code",
       "source": [
-        "#TO BE DONE"
+        "# get the input from the user\n",
+        "max_day = input(\"Enter the number of days: \")\n",
+        "max_day = int(max_day)\n",
+        "\n",
+        "\n",
+        "# initialize the variables\n",
+        "day_num = 1   # we need this to check the loop condition\n",
+        "pay_for_the_day = 1  # for keeping track of the pay for a given day\n",
+        "total_pay = 0  # need this to print the final output\n",
+        "\n",
+        "# setup the while loop\n",
+        "while (day_num <= max_day):\n",
+        "    if day_num == 1 :\n",
+        "       pay_for_the_day = 1 \n",
+        "    else :\n",
+        "        pay_for_the_day = pay_for_the_day * 2\n",
+        "    print('day', day_num, ' = ' , pay_for_the_day, ' pennies')\n",
+        "    \n",
+        "    day_num = day_num + 1\n",
+        "    total_pay = total_pay + pay_for_the_day\n",
+        "  \n",
+        "# print the final output\n",
+        "print('The total pay in pennies' , total_pay)\n",
+        "print('The total pay in dollars' , total_pay/100)"
       ],
       "metadata": {
-        "id": "L_GYD0KtSN0d"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L_GYD0KtSN0d",
+        "outputId": "d43be66c-59b3-4bd3-9e47-7222ee0dcaea"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number of days: 5\n",
+            "day 1  =  1  pennies\n",
+            "day 2  =  2  pennies\n",
+            "day 3  =  4  pennies\n",
+            "day 4  =  8  pennies\n",
+            "day 5  =  16  pennies\n",
+            "The total pay in pennies 31\n",
+            "The total pay in dollars 0.31\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
