--- a/ch_4_while_loops.ipynb
+++ b/ch_4_while_loops.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEHJk3g7YAiqlxmsKGFsyN",
+      "authorship_tag": "ABX9TyPfQNtZnkgNYu/DEQnpqWmA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -189,7 +189,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 2. Calories Burned\n",
+        "### 2.2. Calories Burned\n",
         "Running on a particular treadmill you burn 4.2 calories per minute. Write a program that uses a\n",
         "loop to display the number of calories burned after 10, 15, 20, 25, and 30 minutes."
       ],
@@ -292,7 +292,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Pennies for Pay\n",
+        "### 2.7. Pennies for Pay\n",
         "Write a program that calculates the amount of money a person would earn over a period of time\n",
         "if his or her salary is one penny the first day, two pennies the second day, and continues to\n",
         "double each day. The program should ask the user for the number of days. Display a table\n",
