--- a/ch5_programming_assignments.ipynb
+++ b/ch5_programming_assignments.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPy3/6EOuGZbzrs27aupNiq",
+      "authorship_tag": "ABX9TyN8bcPzgd+xtGNA6gvNhnJA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,53 +100,347 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "zarkRj2C1uv0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "### 3.How much Insurance"
+        "### 2. Sales Tax Program Refactoring\n",
+        "\n",
+        "Programming Exercise #6 in Chapter 2 was the Sales Tax program. For that exercise, you were\n",
+        "asked to write a program that calculates and displays the county and state sales tax on a\n",
+        "purchase. If you have already written that program, redesign it so the subtasks are in functions.\n",
+        "If you have not already written that program, write it using functions.\n"
       ],
       "metadata": {
-        "id": "TZvxak-41jl3"
+        "id": "XMKQRFAoCQkT"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "'''\n",
-        "How Much Insurance\n",
+        "#2. sales tax program refractoring\n",
+        "\n",
+        "def calculate_state_tax(purchase, state_tax):\n",
+        "  state_tax_cost= purchase* state_tax\n",
+        "  return state_tax_cost\n",
+        "\n",
+        "def calculate_county_tax(p, t):\n",
+        "  county_tax = p * t\n",
+        "  return county_tax\n",
+        "\n",
+        "def fcalculate_total_expense(purchase, state_tax, county_tax):\n",
+        "  total = purchase + state_tax + county_tax\n",
+        "  return total\n",
+        "\n",
+        "def tax_calculator():\n",
+        "    state_tax_rate =float(input(\"What is the sales tax in your state?\"))\n",
+        "    county_tax_rate =float(input(\"What is the sales tax in your county?\"))\n",
+        "    purchase=float(input(\"How much is the purchase?\"))\n",
+        "\n",
+        "    # call the function to calculate the state tax\n",
+        "    state_tax = calculate_state_tax(purchase, state_tax_rate)\n",
+        "\n",
+        "    # call the function to calculate the county tax\n",
+        "    county_tax  = calculate_county_tax(purchase, county_tax_rate)\n",
+        "\n",
+        "    # call the function to calculate the total epense\n",
+        "    total_expense = fcalculate_total_expense(purchase, state_tax, county_tax)\n",
+        "\n",
+        "    # print the total expense\n",
+        "    print(\"Your total is\", total_expense)\n",
+        "\n",
+        "# call the main function\n",
+        "tax_calculator()"
+      ],
+      "metadata": {
+        "id": "5nnrbFm1CTc8",
+        "outputId": "fea40be1-825a-48ba-b818-4c47f1418ac8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is the sales tax in your state?5\n",
+            "What is the sales tax in your county?10\n",
+            "How much is the purchase?500\n",
+            "Your total is 8000.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3. How Much Insurance?\n",
         "Many financial experts advise that property owners should insure their homes or buildings for at\n",
         "least 80 percent of the amount it would cost to replace the structure. Write a program that asks\n",
         "the user to enter the replacement cost of a building, then displays the minimum amount of\n",
-        "insurance he or she should buy for the property.\n",
-        "'''\n",
-        "#--------- function definition\n",
-        "def replacement_cost():\n",
-        "    replacement_cost = float(input('Enter the replacement cost of the building: '))\n",
-        "    insurance_amount = replacement_cost * 0.8\n",
-        "    print('Minimum Insurance amount for the property is: ' , insurance_amount)\n",
-        "\n",
-        "#----------- calling the function\n",
-        "\n",
-        "while True:\n",
-        "    replacement_cost()\n",
-        "    response = input(\"Would you like to continue (yes/no)? \")\n",
-        "    if (response == \"no\"):\n",
-        "        break\n",
-        "    "
+        "insurance he or she should buy for the property.\n"
       ],
       "metadata": {
-        "id": "VOoKC4Ph1kEl"
+        "id": "BcXyAm7sE8Uq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# function definition\n",
+        "def find_min_insurance(cost):\n",
+        "    minimum = cost * 0.8\n",
+        "    return minimum\n",
+        "\n",
+        "\n",
+        "# function invocation / calling\n",
+        "cost = int(input(\"How much does the building cost?\"))\n",
+        "minimum = find_min_insurance(cost)\n",
+        "print(\"The minimum insurance bought should be:\",minimum)"
+      ],
+      "metadata": {
+        "id": "a2nrUan7E9lw",
+        "outputId": "ff6b082a-0e5a-4661-9b7e-4b2db658ccb3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How much does the building cost?100000\n",
+            "The minimum insurance bought should be: 80000.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 4. Automobile Costs\n",
+        "\n",
+        "Write a program that asks the user to enter the monthly costs for the following expenses\n",
+        "incurred from operating his or her automobile: loan payment, insurance, gas, oil, tires, and\n",
+        "maintenance. The program should then display the total monthly cost of these expenses, and the\n",
+        "total annual cost of these expenses.\n"
+      ],
+      "metadata": {
+        "id": "XBt2HSPmF1D-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "monthly_expense = 0\n",
+        "\n",
+        "def find_monthly_cost():  \n",
+        "    loan=int(input(\"how much do you spend on your car loan monthly?\"))\n",
+        "    gas=int(input(\"how much do you spend on gas monthly?\"))\n",
+        "    tires=int(input(\"how much do you spend on tires monthly?\"))\n",
+        "    oil=int(input(\"how much do you spend on oil monthly?\"))\n",
+        "    insurance=int(input(\"how much do you spend on insurance monthly?\"))\n",
+        "    maintenance=int(input(\"how much do you spend on maintence monthly?\"))\n",
+        "\n",
+        "    monthly_expense = loan + gas + tires + oil + insurance + maintenance \n",
+        "    return monthly_expense\n",
+        "\n",
+        "\n",
+        "def find_annual_cost():\n",
+        "    annual_cost = monthly_expense * 12\n",
+        "    return annual_cost\n",
+        "\n",
+        "\n",
+        "\n",
+        "# call the monthly cost\n",
+        "print(\"Your monthly total is:\", find_monthly_cost())\n",
+        "print(\"your yearly total is:\", find_annual_cost())"
+      ],
+      "metadata": {
+        "id": "CgFzAFIZF3Up",
+        "outputId": "652ea197-c119-470b-be59-250c9a3ac17b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "how much do you spend on your car loan monthly?400\n",
+            "how much do you spend on gas monthly?30\n",
+            "how much do you spend on tires monthly?30\n",
+            "how much do you spend on oil monthly?20\n",
+            "how much do you spend on insurance monthly?20\n",
+            "how much do you spend on maintence monthly?40\n",
+            "Your monthly total is: None\n",
+            "your yearly total is: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 5. Property Tax\n",
+        "A county collects property taxes on the assessment value of property, which is 60 percent of the\n",
+        "property’s actual value. \n",
+        "\n",
+        "For example, if an acre of land is valued at 10,000 dollars, its assessment\n",
+        "value is 6,000 dollars. The property tax is then 72¢ for each $100 of the assessment value. \n",
+        "\n",
+        "The tax for\n",
+        "the acre assessed at 6,000 dollars will be  $43.20. \n",
+        "\n",
+        "Write a program that asks for the actual value of a\n",
+        "piece of property and displays the assessment value and property tax.\n"
+      ],
+      "metadata": {
+        "id": "UwVWa9wEH4zg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# setup the constants\n",
+        "ASSESSMENT_RATE = 0.6\n",
+        "PROPERTY_TAX_RATE = 0.0072\n",
+        "\n",
+        "\n",
+        "'''\n",
+        "This method returns the assessment value based on the property value.\n",
+        "'''\n",
+        "def get_assessment_value(property_value):\n",
+        "    assessment_val = property_value* ASSESSMENT_RATE\n",
+        "    return assessment_val\n",
+        "\n",
+        "'''\n",
+        "This method takes the assessment_value and \n",
+        "returns the property tax\n",
+        "'''\n",
+        "def get_proprty_tax(assessment_val):\n",
+        "    tax = assessment_val* PROPERTY_TAX_RATE\n",
+        "    return tax\n",
+        "\n",
+        "\n",
+        "# function calling / invocation\n",
+        "\t\n",
+        "real_val = int(input(\"how much did you pay for your house?\"))\n",
+        "\n",
+        "assess_value = get_assessment_value(real_val)\n",
+        "tax = get_proprty_tax(assess_value)\n",
+        "\n",
+        "print(\"Your assessment value will be:\", assess_value)\n",
+        "print(\"And your property tax will be:\", tax)\n"
+      ],
+      "metadata": {
+        "id": "fvVeTiT0H9O0",
+        "outputId": "0112bb79-3191-4c4c-f88c-e5590eff111f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "how much did you pay for your house?100000\n",
+            "Your assessment value will be: 60000.0\n",
+            " And your property tax will be: 432.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 6. Calories from Fat and Carbohydrates\n",
+        "A nutritionist who works for a fitness club helps members by evaluating their diets. As part of\n",
+        "her evaluation, she asks members for the number of fat grams and carbohydrate grams that they\n",
+        "consumed in a day. Then, she calculates the number of calories that result from the fat, using the\n",
+        "following formula:\n",
+        "\n",
+        "calories from fat=fat grams × 9\n",
+        "\n",
+        "Next, she calculates the number of calories that result from the carbohydrates, using the\n",
+        "following formula:\n",
+        "\n",
+        "calories from carbs=carb grams × 4\n",
+        "\n",
+        "The nutritionist asks you to write a program that will make these calculations"
+      ],
+      "metadata": {
+        "id": "qt_nd6YWJPzW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "CARB_CALORIES = 4\n",
+        "FAT_CALORIES = 9\n",
+        "\n",
+        "# defining the functions\n",
+        "\n",
+        "def carb(carbs_intake):\n",
+        "    carbs_cal = carbs_intake * CARB_CALORIES\n",
+        "    return carbs_cal\n",
+        "    \n",
+        "def fat(fat_intake):\n",
+        "    fat_cal = fat_intake * FAT_CALORIES\n",
+        "    return fat_cal\n",
+        "\n",
+        "def find_total_cal(carbs_cal, fat_cal):\n",
+        "    total = carbs_cal + fat_cal\n",
+        "    return total\n",
+        "  \n",
+        "\n",
+        "\n",
+        "#6. carb and fat calorie calculator\n",
+        "\n",
+        "def main( ):\n",
+        "    # preparing the inputs for the functions   \n",
+        "    carbs_intake = int(input(\"how much carbs do you get in a day?\"))\n",
+        "    fat_intake = int(input(\"how much fat do you get in a day?\"))\n",
+        "\n",
+        "    carb_cal = carb(carbs_intake)\n",
+        "    fat_cal = fat(fat_intake)\n",
+        "    total_cal = find_total_cal(carb_cal, fat_cal)\n",
+        "\n",
+        "    print(\"You get\", fat_cal,\" calories a day from fat and\", carb_cal,\" calories a day from carbs.\")\n",
+        "    print(\"Your total calories in a day are:\",total_cal,)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# invoke the main function\n",
+        "main()"
+      ],
+      "metadata": {
+        "id": "Z0v1Ius6JcmU",
+        "outputId": "912c6a4f-01f7-4510-d126-69b85382f6bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "how much carbs do you get in a day?100\n",
+            "how much fat do you get in a day?20\n",
+            "You get 180  calories a day from fat and 400  calories a day from carbs.\n",
+            "Your total calories in a day are: 580\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -547,7 +841,7 @@
         "id": "ut9OP0z620eD",
         "outputId": "c8b3e9ca-41c2-434c-929d-a917421d8eee"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,7 +887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -670,7 +964,7 @@
         "id": "VjjymtDG2mBC",
         "outputId": "98dab448-6922-47d6-8a46-7afbc1aa1b94"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -761,7 +1055,7 @@
         "id": "neF3XUWhzLIW",
         "outputId": "1059ab38-71e1-41db-f1ca-2181ae1765fb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
